@@ -6,6 +6,9 @@
 	* src/exmpp_internals.erl: New module which provide low-level
 	functions for port drivers handling.
 
+	* src/exmpp_sup.erl: Supervisor who is responsible for
+	exmpp_stringprep startup.
+
 2007-02-06  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* c_src/uni_data.c, c_src/uni_norm.c, c_src/stringprep_uni_data.h,
